Fix a bug in which the last square jumps to next row. Remove two pixels to fit in row

--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,6 @@ button.btn:hover {
 }
 
 .square {
-  width: 25px;
-  height: 25px;
   border: 1px solid black;
   box-sizing: border-box;
   background-color: white;
